--- a/src/main/resources/templates/new-post.html
+++ b/src/main/resources/templates/new-post.html
@@ -13,33 +13,30 @@
 
 <main>
     <div class="form-container">
-        <form action="/posts/submit" method="post" enctype="multipart/form-data"
+        <form id="post-submit" action="/posts/submit" method="post" enctype="multipart/form-data"
               novalidate>
             <div class="left-container">
-                <input type="hidden" name="userId" th:value="${user.id}">
+                <input type="hidden" name="userId" th:value="${user.id}"/>
                 <div class="input-np inp-title">
                     <input id="inp-title" class="flat-inp-np" type="text" name="title"
-                           maxlength="60" autofocus required>
+                           maxlength="60" autofocus required/>
                     <span class="highlight-np"></span>
                     <label for="inp-title" class="label-np">Title</label>
-                    <div class="prompt">Already taken</div>
+                    <div class="prompt">Required</div>
                 </div>
                 <div class="input-np inp-sum">
                     <input id="inp-sum" class="flat-inp-np" type="text"
-                           name="summary"
-                           maxlength="100"
-                           required>
+                           name="summary" maxlength="100" required/>
                     <span class="highlight-np"></span>
                     <label for="inp-sum" class="label-np">Summary</label>
-                    <div class="prompt">Already taken</div>
+                    <div class="prompt">Required</div>
                 </div>
                 <div class="input-np inp-article">
-                <textarea class="flat-inp-np multiline-text" name="article"
-                          id="inp-article"
-                          required></textarea>
+                    <textarea class="flat-inp-np multiline-text" name="article" id="inp-article"
+                              required></textarea>
                     <span class="highlight-np"></span>
                     <label for="inp-article" class="label-np">Article</label>
-                    <div class="prompt">Already taken</div>
+                    <div class="prompt">Required</div>
                 </div>
             </div>
             <div class="right-container">
@@ -58,7 +55,7 @@
                            name="category" required>
                     <span class="highlight-np"></span>
                     <label for="inp-cats" class="label-np">Category(s)</label>
-                    <div class="prompt">Already taken</div>
+                    <div class="prompt">Required</div>
                 </div>
             </div>
             <button type="submit" class="btn">Create</button>
