--- a/src/main/resources/static/css/new-post-styles.css
+++ b/src/main/resources/static/css/new-post-styles.css
@@ -1,3 +1,4 @@
+
 .form-container {
     margin-top: 24px;
 }
@@ -8,9 +9,9 @@ form {
 }
 
 .right-container {
+    align-items: center;
     display: flex;
     flex-flow: column;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -21,15 +22,15 @@ form {
 
 .post-input {
     display: block;
-    width: fit-content;
     margin: 12px auto 0;
     padding: 5px 6px;
+    width: fit-content;
 }
 
 .input-np {
+    margin: 34px 0;
     position: relative;
     width: 95%;
-    margin: 34px 0;
 }
 
 .flat-inp-np {
@@ -59,6 +60,7 @@ form {
     position: absolute;
     top: 9px;
     transition: 0.22s ease all;
+    unicode-bidi: plaintext;
 }
 
 #inp-title, #inp-sum, #inp-cats {
@@ -76,19 +78,20 @@ fieldset {
 }
 
 fieldset legend {
+    color: #00acc1;
     font-size: 15px;
     padding: 0 4px;
-    color: #00acc1;
 }
 
 .file-prev {
-    width: 250px;
-    margin: 0 auto;
     display: block;
+    margin: 0 auto;
+    width: 250px;
 }
- button {
-     border: none;
-     width: 10%;
-     font-size: 15px;
-     margin-bottom: 24px;
- }
+
+.button {
+    border: none;
+    font-size: 15px;
+    margin-bottom: 24px;
+    width: 10%;
+}
