--- a/src/main/resources/static/css/post-styles.css
+++ b/src/main/resources/static/css/post-styles.css
@@ -1,8 +1,8 @@
-main {
+.page-container {
     display: grid;
-    width: 90%;
     grid-template-columns: 5fr 2fr;
     grid-gap: 16px;
+    margin-left: 16px;
 }
 
 .main-content {
@@ -18,15 +18,12 @@ main {
     margin: 30px 0;
 }
 
-.article-img {
+.article-container video {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
-    width: 100%;
 }
 
-.article-video {
-    max-height: 500px;
-    background-color: #000;
+.article-img {
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
     width: 100%;
@@ -39,16 +36,17 @@ main {
 }
 
 .info {
-    margin-right: 24px;
     display: flex;
     flex-flow: column;
     justify-content: center;
+    margin-right: 24px;
 }
 
 .article-title {
-    margin: 0;
     font-size: 26px;
     line-height: 36px;
+    margin: 0;
+    unicode-bidi: plaintext;
 }
 
 .subheading {
@@ -68,9 +66,9 @@ main {
 }
 
 .subheading .time {
-    margin-left: 24px;
     color: #9a9a9a;
     font-size: 12px;
+    margin-left: 24px;
 }
 
 .creator {
@@ -79,19 +77,20 @@ main {
 }
 
 .actions svg {
-    fill: #AAB8C2;
     cursor: pointer;
+    fill: #AAB8C2;
 }
 
-.actions svg:not(:first-of-type) {
-    margin-top: 9px;
+.disabled {
+    color: #aab8c2;
+    cursor: auto !important;
 }
 
 .pin-icon {
     height: 18px;
 }
 
-.pin-icon:hover {
+.pin-icon:not(.disabled):hover {
     fill: #00acc1;
 }
 
@@ -99,23 +98,25 @@ main {
     height: 17px;
 }
 
-.del-icon:hover {
+.del-icon:not(.disabled):hover {
     fill: #ff6259;
 }
 
 .chng-cats-icon {
     height: 15px;
+    margin-left: -1px;
 }
 
-.chng-cats-icon:hover {
-    fill: #00acc1;
+.chng-cats-icon:not(.disabled):hover {
+    fill: #00acc1 !important;
 }
 
 .rep-icon {
     height: 15px;
+    margin-left: -1px;
 }
 
-.rep-icon:hover {
+.rep-icon:not(.disabled):hover {
     fill: #ffaa52;
 }
 
@@ -146,9 +147,9 @@ main {
 }
 
 .chng-cats-content {
+    align-items: center;
     display: flex;
     flex-flow: column;
-    align-items: center;
 }
 
 .changeable-cat {
@@ -157,8 +158,8 @@ main {
 }
 
 .cat-del {
-    position: relative;
     margin-top: 12px;
+    position: relative;
 }
 
 .cat-del:last-of-type {
@@ -166,17 +167,17 @@ main {
 }
 
 .cat-del-ico {
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
-    font-size: 12px;
     background-color: rgba(255, 0, 0, 0.4);
-    text-align: center;
-    position: absolute;
-    top: 6px;
-    right: 18px;
+    border-radius: 50%;
     color: #fff;
     cursor: pointer;
+    font-size: 12px;
+    height: 14px;
+    position: absolute;
+    right: 18px;
+    text-align: center;
+    top: 6px;
+    width: 14px;
 }
 
 .cat-del-ico:hover {
@@ -188,22 +189,22 @@ main {
 }
 
 .cat-add input {
-    width: 80px;
     margin-bottom: 8px;
+    width: 80px;
 }
 
 .cat-add-ico {
-    width: 13px;
-    height: 13px;
-    border-radius: 50%;
-    font-size: 12px;
     background-color: rgba(50, 50, 50, 0.5);
-    text-align: center;
-    position: absolute;
-    top: 5px;
-    right: 7px;
+    border-radius: 50%;
     color: #fff;
     cursor: pointer;
+    font-size: 12px;
+    height: 13px;
+    position: absolute;
+    right: 7px;
+    text-align: center;
+    top: 5px;
+    width: 13px;
 }
 
 .cat-add-ico:hover {
@@ -240,8 +241,8 @@ main {
 }
 
 .comm-count span {
-    padding-right: 10px;
     font-size: 12px;
+    padding-right: 10px;
 }
 
 .likes-right {
@@ -254,18 +255,19 @@ main {
     position: relative;
 }
 
-.actions img:not(:last-child) {
-    margin-bottom: 10px;
+.actions svg {
+    margin-bottom: 7px;
 }
 
 .article-share {
     margin-left: 10px;
+    display: flex;
 }
 
 .article-share a {
+    /*filter: grayscale(100%);*/
+    /*-webkit-filter: grayscale(100%);*/
     text-decoration: none;
-    filter: grayscale(100%);
-    -webkit-filter: grayscale(100%);
 }
 
 .article-share a:hover {
@@ -273,17 +275,48 @@ main {
     -webkit-filter: grayscale(0%);
 }
 
+.shr-boxed {
+    display: flex;
+    padding: 3px 12px;
+    border-radius: 2px;
+    background-color: #f4f4f4;
+    margin-right: 12px;
+    transition: all ease 0.1s;
+}
+
+.shr-boxed:hover {
+    background-color: #e0e0e0;
+}
+
+.shr-boxed:first-of-type {
+    border-top: 2px solid #3b5998;
+}
+
+.shr-boxed:nth-of-type(2) {
+    border-top: 2px solid #1DA1F2;
+}
+
+.shr-boxed:nth-of-type(3) {
+    border-top: 2px solid #35465C;
+}
+
+.shr-boxed:last-of-type {
+    border-top: 2px solid #BD081C;
+}
+
 .article-share img {
-    margin-right: 18px;
-    width: 20px;
-    margin-top: 4px;
+    /*margin-right: 18px;*/
+    /*margin-top: 4px;*/
+    height: 14px;
+    width: 13.5px;
 }
 
 .article-content {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 26px;
-    margin-top: 16px;
+    margin-top: 14px;
     text-align: justify;
+    unicode-bidi: plaintext;
 }
 
 .similar-container {
@@ -312,8 +345,14 @@ main {
 .comments {
     background: rgb(247, 247, 247);
     border-radius: 2px;
-    margin-top: 36px;
+    margin-top: 28px;
     padding: 16px;
+    font-size: 15px;
+}
+
+.wrt-comment {
+    margin-top: 30px;
+    margin-bottom: -12px;
 }
 
 .wrt-comment .btn {
@@ -321,30 +360,30 @@ main {
 }
 
 .comment img {
-    width: 32px;
     border-radius: 50%;
+    width: 32px;
 }
 
 .com-auth-name {
-    margin-top: 4px;
     font-size: 12px;
+    margin-top: 4px;
 }
 
 .comment {
     align-items: start;
+    background-color: #fcfcfc;
+    border-left: 3px solid #d0d0d0;
     display: flex;
     margin-top: 20px;
-    border-left: 3px solid #d0d0d0;
-    background-color: #fcfcfc;
 }
 
 .comment-text {
     color: #444444;
-    line-height: 21px;
-    padding: 12px 0;
-    margin: auto 0;
-    width: 88%;
     font-size: 14px;
+    line-height: 21px;
+    margin: auto 0;
+    padding: 12px 0;
+    width: 88%;
 }
 
 .comment-author {
@@ -355,9 +394,13 @@ main {
     width: 75px;
 }
 
+.wrt-comment p {
+    font-size: 15px;
+}
+
 .wrt-comment button {
     border: none;
-    width: 8%;
     font-size: 15px;
     margin-bottom: 24px;
+    width: 8%;
 }
