--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,13 +1,21 @@
 /*=======================================*/
 /*************** Common ****************/
 :root {
-    --nav-height: 56px;
+    --nav-height: 52px;
     --footer-height: 280px;
 }
 
 @font-face {
-    font-family: Molengo;
-    src: url(../fonts/Molengo.ttf);
+    font-family: Sahel;
+    src: url(../fonts/Sahel-FD.ttf);
+    unicode-range: U+0600-06FF;
+}
+
+@font-face {
+    font-family: Sahel;
+    src: url(../fonts/Sahel-FD-Bold.ttf);
+    unicode-range: U+0600-06FF;
+    font-weight: bold;
 }
 
 @font-face {
@@ -15,9 +23,33 @@
     src: url(../fonts/Roboto-Regular.ttf);
 }
 
+@font-face {
+    font-family: Roboto;
+    src: url(../fonts/Roboto-Bold.ttf);
+    font-weight: bold;
+}
+
 * {
     box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
+    font-family: "Sahel", "Roboto", sans-serif;
+}
+
+/*prevent animations to run on page load*/
+.preload * {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    -ms-transition: none !important;
+    -o-transition: none !important;
+}
+
+::selection {
+    background: #00BCD4;
+    color: #222;
+}
+
+::-moz-selection {
+    background: #00BCD4;
+    color: #222;
 }
 
 body {
@@ -36,6 +68,86 @@ main {
     fill: #00acc1 !important;
 }
 
+#results-container {
+    display: grid;
+    margin: 10px auto 0;
+    width: 90%;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.result-prompt {
+    background: #ffffff;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    height: fit-content;
+    margin: 20px auto -10px;
+    font-size: 15px;
+    padding: 10px 24px;
+    width: 87.5%;
+}
+
+.no-result-prompt {
+    background: #ffffff;
+    border-radius: 2px;
+    bottom: 0;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    height: fit-content;
+    left: 0;
+    font-size: 15px;
+    line-height: 36px;
+    margin: auto;
+    padding: 20px;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: -180px;
+    width: fit-content;
+}
+
+.no-result-prompt img {
+    height: 50px;
+}
+
+.page-prompt {
+    position: fixed;
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    z-index: 5;
+    bottom: 30px;
+    padding: 22px;
+    left: 0;
+    right: 0;
+    visibility: visible;
+    margin: 24px auto -10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+    height: 40px;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    background-size: cover;
+    /*background: #006064 url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23006f76' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23007d88' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23008d9b' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23009cae' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%2300acc1' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%2300a8bc' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%2300a4b7' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23009fb1' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23009bac' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%230097a7' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E") fixed center;*/
+    background: #00838F;
+    animation: comeUp 0.5s, fadeout 0.5s 5s;
+    animation-fill-mode: forwards;
+    -webkit-animation: comeUp 0.5s, fadeout 0.5s 5s;
+    -webkit-animation-fill-mode: forwards;
+}
+
+.page-prompt-text {
+    unicode-bidi: plaintext;
+}
+
+.close-prompt {
+    position: absolute;
+    right: 20px;
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+}
+
 /****************************************/
 /************ Top navigation ************/
 nav {
@@ -49,6 +161,11 @@ nav {
     z-index: 100;
 }
 
+.active {
+    background-color: #00acc1;
+    color: #fff;
+}
+
 .nav-container {
     align-items: center;
     display: flex;
@@ -58,9 +175,62 @@ nav {
     max-width: 1200px;
 }
 
+.brand-search-container {
+    display: flex;
+}
+
+.search-container {
+    display: flex;
+    margin-left: 40px;
+    align-items: center;
+    width: 240px;
+}
+
+.search-form {
+    display: flex;
+    align-items: center;
+}
+
+.search-button {
+    display: flex;
+    background: none;
+    border: none;
+    position: relative;
+    right: 26px;
+    cursor: pointer;
+    outline: none;
+}
+
+.search-icon {
+    width: 12px;
+}
+
+.search-input {
+    width: 200px;
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    padding: 0 8px;
+    height: 28px;
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    color: #555;
+    border-radius: 4px;
+    transition: all ease 0.18s;
+}
+
+.search-input:focus {
+    width: 240px;
+    border: 1px solid #ccc;
+}
+
+.search-input::placeholder {
+    color: #b0b0b0;
+}
+
 .brand {
     display: flex;
-    height: 36px;
+    height: 32px;
     margin: 2px 0 0 40px;
     fill: #00acc1;
 }
@@ -68,6 +238,8 @@ nav {
 .cat-container {
     display: flex;
     height: 100%;
+    font-size: 15px;
+    margin-left: -110px;
 }
 
 .cat-container a {
@@ -85,7 +257,12 @@ nav {
 
 .cat-container a:hover:not(.active) {
     background-color: #00acc1;
-    color: white;
+    color: #fff;
+}
+
+.usr-inf-container {
+    margin-right: 40px;
+    margin-left: -65px;
 }
 
 .usr, .usr-inf-container, .usr-log, .usr-inf-txt, .usr-inf, .usr-inf-score {
@@ -103,30 +280,32 @@ nav {
 }
 
 #log-in {
-    margin-right: 32px;
-    font-weight: bold;
-    font-size: 15px;
-    cursor: pointer;
-    transition: all ease 0.12s;
     color: #666;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: bold;
+    margin-right: 30px;
+    transition: all ease 0.12s;
 }
 
-#sign-up:hover, #log-in:hover {
+#log-in:hover, #sign-up:hover {
     color: #00acc1;
 }
 
 #sign-up {
-    margin-right: 36px;
-    font-weight: bold;
-    font-size: 15px;
+    color: #0097A7;
     cursor: pointer;
+    font-size: 15px;
+    font-weight: bold;
+    margin-right: 40px;
     transition: all ease 0.12s;
-    color: #666;
 }
 
 #new-post {
     margin-right: 36px;
-    padding: 7px 9px;
+    padding: 6px 8px;
+    font-size: 14px;
+    transition: all ease 0.4s;
 }
 
 #usr-name, #score {
@@ -153,7 +332,7 @@ nav {
 .btn {
     background-color: #00acc1;
     border-radius: 2px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 5px, rgba(0, 0, 0, 0.12) 0 1px 3px;
     color: white;
     cursor: pointer;
     display: inline-block;
@@ -352,6 +531,10 @@ input:focus ~ label, input:valid ~ label, textarea:focus ~ label, textarea:valid
     cursor: pointer;
 }
 
+.log-prompt:hover {
+    color: #00acc1;
+}
+
 .input {
     margin: 50px auto 0;
     position: relative;
@@ -419,8 +602,8 @@ input:focus ~ label, input:valid ~ label, textarea:focus ~ label, textarea:valid
 .invalid-login {
     color: #c61e23;
     display: none;
-    font-size: 15px;
-    margin-top: 20px;
+    font-size: 13px;
+    margin-top: 40px;
 }
 
 .login-form .input:first-child, .register-form .input:first-child {
@@ -449,19 +632,62 @@ input:focus ~ label, input:valid ~ label, textarea:focus ~ label, textarea:valid
     }
 }
 
+@keyframes comeUp {
+    from {
+        bottom: 0;
+    }
+    to {
+        bottom: 30px;
+    }
+}
+
+@-webkit-keyframes comeUp {
+    from {
+        bottom: 0;
+    }
+    to {
+        bottom: 30px;
+    }
+}
+
+@-webkit-keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
+}
+
+@keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+        visibility: visible;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 .logout {
     height: 18px;
     vertical-align: middle;
-    margin-right: 24px;
     fill: #aab8c2;
+    cursor: pointer;
 }
 
 /****************************************/
 /************ Main content ************/
 main {
     margin: auto;
-    padding-top: var(--nav-height);
     padding-bottom: var(--footer-height);
+    padding-top: var(--nav-height);
+    /*overflow: hidden;*/
 }
 
 .top-cards {
@@ -500,6 +726,7 @@ main {
     margin: 8px 0;
     text-align: justify;
     text-justify: distribute;
+    unicode-bidi: plaintext;
 }
 
 .card-avatar {
@@ -554,10 +781,11 @@ main {
     justify-content: space-between;
 }
 
-.score h4 {
+.score span {
     color: #AAB8C2;
     font-size: 11px;
     margin: 0;
+    font-weight: bold;
 }
 
 .score img {
@@ -575,6 +803,7 @@ main {
 .read-more {
     background-color: transparent;
     border-radius: 2px;
+    unicode-bidi: plaintext;
     color: #959595;
     font-size: 12px;
     padding: 8px 10px 6px;
@@ -603,8 +832,8 @@ main {
     position: relative;
 }
 
-.card-video {
-    /*max-height: 185px;*/
+.card .card-video {
+    max-height: 185px;
     /*min-height: 144px;*/
     background-color: #000;
 }
@@ -619,54 +848,54 @@ main {
 }
 
 .ply-btn {
-    width: 20%;
-    height: 26%;
-    max-width: 60px;
-    max-height: 40px;
     background-color: rgba(23, 33, 35, .75);
-    position: absolute;
-    cursor: pointer;
     border-radius: 5px;
-    top: 0;
     bottom: 0;
-    right: 0;
+    cursor: pointer;
+    height: 26%;
     left: 3px;
     margin: auto;
+    max-height: 40px;
+    max-width: 60px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 20%;
 }
 
 .ply-btn:hover {
-    background-color: rgba(0, 172, 193, .9);
+    background-color: rgba(0, 172, 193, .91);
 }
 
 .ply-ico {
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
     background: transparent;
     border: 0;
-    text-indent: 30px;
-    outline: none;
-    width: 30px;
+    bottom: 0;
+    cursor: pointer;
     height: 32px;
+    left: 0;
+    margin: auto;
+    outline: none;
+    position: absolute;
+    right: 0;
+    text-indent: 30px;
+    top: 0;
     transform: scale(.5, .5);
+    width: 30px;
 }
 
 .ply-ico::before, .ply-ico::after {
+    border: 0 solid transparent;
+    border-left-color: #eee;
+    border-width: 8px 0 8px 15px;
     content: '';
     display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    border: 0 solid transparent;
-    border-width: 8px 0 8px 15px;
-    border-left-color: #eee;
-    width: 0;
     height: 0;
+    left: 0;
+    position: absolute;
+    top: 0;
     transition: all 0.2s linear;
+    width: 0;
 }
 
 .ply-ico::before {
@@ -688,11 +917,27 @@ main {
     top: 0;
 }
 
-.prog-bar {
-    position: absolute;
+progress {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: none;
     bottom: 0;
     height: 4px;
-    background-color: #00acc1;
+    position: absolute;
+    width: 100%;
+}
+
+progress::-moz-progress-bar {
+    background: #00acc1;
+    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+progress::-webkit-progress-bar {
+    background: none;
+}
+
+progress::-webkit-progress-value {
+    background: #00acc1;
     box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -702,11 +947,12 @@ main {
     line-height: 26px;
     margin: 0;
     text-align: justify;
+    unicode-bidi: plaintext;
 }
 
 .hot-icon {
-    margin-right: 18px;
     height: 18px;
+    margin-right: 18px;
     vertical-align: middle;
     fill: #aab8c2;
 }
@@ -732,11 +978,13 @@ main {
 
 .share-content img {
     margin: 10px 10px 0;
-    width: 20px;
+    width: 15px;
+    height: 18px;
 }
 
 .share-content a:last-child img {
     margin-bottom: 5px;
+    width: 14px;
 }
 
 /* arrow for triangle */
@@ -776,8 +1024,8 @@ main {
 .meters {
     align-items: center;
     display: flex;
-    margin-top: 4px;
     margin-left: 20px;
+    margin-top: 4px;
 }
 
 /*********** like icon ***********/
@@ -912,7 +1160,7 @@ main {
     background: white;
     border-radius: 2px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    color: #aaaaaa;
+    color: #959595;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
@@ -933,7 +1181,7 @@ main {
 /*************************************************/
 /*************** media queries *******************/
 @media screen and (max-width: 1340px) {
-    .pined-cards {
+    .pinned-cards {
         display: none;
     }
 
@@ -963,7 +1211,7 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .pined-cards {
+    .pinned-cards {
         display: none;
     }
 
@@ -993,7 +1241,7 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .pined-cards {
+    .pinned-cards {
         display: none;
     }
 
@@ -1041,12 +1289,12 @@ main {
 /********************* footer *********************/
 .page-footer {
     background: #f5f5f5;
+    bottom: 0;
     box-shadow: 0 -2px 3px 0 rgba(0, 0, 0, 0.14);
     -webkit-box-shadow: 0 -2px 3px 0 rgba(0, 0, 0, 0.14);
     margin-top: 20px;
-    width: 100%;
     position: absolute;
-    bottom: 0;
+    width: 100%;
 }
 
 .footer-container {
@@ -1058,13 +1306,50 @@ main {
     height: 200px;
 }
 
+.foot-sec-left {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.langs {
+    display: flex;
+    flex-flow: row;
+    margin-top: 36px;
+}
+
+.lang {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.lang:hover .lang-flag {
+    filter: grayscale(0%);
+}
+
+.lang:not(:last-of-type) {
+    margin-right: 20px;
+}
+
+.lang-flag {
+    width: 18px;
+    margin-right: 8px;
+    filter: grayscale(100%) opacity(40%);
+}
+
+.lang-name {
+    font-size: 10px;
+    color: #444;
+}
+
 .copyright {
     background: #eaeaea;
     bottom: 0;
     color: #757575;
     font-size: 14px;
-    padding-top: 14px;
     padding-bottom: 11px;
+    padding-top: 14px;
     text-align: center;
     width: 100%;
 }
@@ -1080,24 +1365,39 @@ main {
     align-items: center;
     display: flex;
     flex-flow: column;
-    font-size: 16px;
+    font-size: 14px;
     justify-content: center;
 }
 
 .foot-sec-1 a, .foot-sec-2 a {
-    color: #505050;
+    color: #272727;
     margin: 10px 0;
     text-decoration: none;
-    transition: all ease 0.12s;
+    transition: all ease 0.08s;
 }
 
 .foot-sec-1 a:hover, .foot-sec-2 a:hover {
-    color: #009aaf;
+    color: #00ACC1;
 }
 
 .foot-brand {
-    height: 70px;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+}
+
+.foot-brand-img {
+    height: 68px;
     fill: #00acc1;
+    /*margin-right: 20px;*/
+    filter: opacity(20%) grayscale(100%);
+}
+
+.foot-brand-name {
+    font-size: 24px;
+    color: #cfcfcf;
+    margin-bottom: 4px;
+    font-family: cursive;
 }
 
 /*******************************/
@@ -1123,4 +1423,6 @@ main {
     overflow: auto;
     resize: none;
     width: 100%;
+    padding: 8px;
+    border: solid 1px #ccc;
 }
