--- a/src/main/resources/templates/new-post.html
+++ b/src/main/resources/templates/new-post.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-    <th:block
-            th:include="fragments::head(title=${@environment.getProperty('title') + ' - Create new post'}, desc='')"/>
+    <th:block th:include="fragments::head(titleAppend=#{post.create})"/>
     <link rel="stylesheet" th:href="@{/css/new-post-styles.css}">
 </head>
 
-<body>
+<body class="preload">
 
 <nav th:replace="fragments::navigation"></nav>
 
@@ -16,49 +14,48 @@
         <form id="post-submit" action="/posts/submit" method="post" enctype="multipart/form-data"
               novalidate>
             <div class="left-container">
-                <input type="hidden" name="userId" th:value="${user.id}"/>
                 <div class="input-np inp-title">
                     <input id="inp-title" class="flat-inp-np" type="text" name="title"
                            maxlength="60" autofocus required/>
                     <span class="highlight-np"></span>
-                    <label for="inp-title" class="label-np">Title</label>
-                    <div class="prompt">Required</div>
+                    <label for="inp-title" class="label-np" th:text="#{title}">Title</label>
+                    <div class="prompt" th:text="#{prompt.required}">Required</div>
                 </div>
                 <div class="input-np inp-sum">
-                    <input id="inp-sum" class="flat-inp-np" type="text"
-                           name="summary" maxlength="100" required/>
+                    <input id="inp-sum" class="flat-inp-np" type="text" name="summary"
+                           maxlength="100" required/>
                     <span class="highlight-np"></span>
-                    <label for="inp-sum" class="label-np">Summary</label>
-                    <div class="prompt">Required</div>
+                    <label for="inp-sum" class="label-np" th:text="#{summary}">Summary</label>
+                    <div class="prompt" th:text="#{prompt.required}">Required</div>
                 </div>
                 <div class="input-np inp-article">
                     <textarea class="flat-inp-np multiline-text" name="article" id="inp-article"
                               required></textarea>
                     <span class="highlight-np"></span>
-                    <label for="inp-article" class="label-np">Article</label>
-                    <div class="prompt">Required</div>
+                    <label for="inp-article" class="label-np" th:text="#{article}">Article</label>
+                    <div class="prompt" th:text="#{prompt.required}">Required</div>
                 </div>
             </div>
             <div class="right-container">
                 <fieldset class="post-file">
-                    <legend>Add an Image or Video</legend>
+                    <legend th:text="#{add-file}">Add an Image or Video</legend>
                     <div class="file-select">
                         <img class="file-prev" src="/images/placeholder-img.svg"/>
                         <label class="file-upload post-input">
-                            <input type="file" name="file" accept="image/*, video/*">
-                            Select file
+                            <input type="file" name="file" accept="image/*, video/*"/>
+                            <span th:text="#{file-select}"></span>
                         </label>
                     </div>
                 </fieldset>
                 <div class="input-np inp-cats">
-                    <input id="inp-cats" class="flat-inp-np" type="text"
-                           name="category" required>
+                    <input id="inp-cats" class="flat-inp-np" type="text" name="category" required>
                     <span class="highlight-np"></span>
-                    <label for="inp-cats" class="label-np">Category(s)</label>
-                    <div class="prompt">Required</div>
+                    <label for="inp-cats" class="label-np" th:text="#{category}">Category(s)</label>
+                    <div class="prompt" th:text="#{prompt.required}">Required</div>
                 </div>
             </div>
-            <button type="submit" class="btn">Create</button>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+            <button type="submit" class="btn button" th:text="#{create}">Create</button>
         </form>
     </div>
 </main>
