--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:include="fragments::head(titleAppend=' - ' + #{${catName}} + ' ' + #{posts})"/>
-    <link rel="stylesheet" th:href="@{/css/category-styles.css}">
+    <link rel="stylesheet" th:href="@{/css/category-styles.min.css}">
 </head>
 
 <body class="preload">
