--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -34,14 +34,6 @@
     font-family: "Sahel", "Roboto", sans-serif;
 }
 
-/*prevent animations to run on page load*/
-.preload * {
-    -webkit-transition: none !important;
-    -moz-transition: none !important;
-    -ms-transition: none !important;
-    -o-transition: none !important;
-}
-
 ::selection {
     background: #00BCD4;
     color: #222;
@@ -50,6 +42,13 @@
 ::-moz-selection {
     background: #00BCD4;
     color: #222;
+}
+
+/*prevent animations to run on page load*/
+.preload * {
+    -moz-transition: none !important;
+    -o-transition: none !important;
+    -webkit-transition: none !important;
 }
 
 body {
@@ -70,7 +69,7 @@ main {
 
 #results-container {
     display: grid;
-    margin: 10px auto 0;
+    margin: 6px auto 0;
     width: 90%;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -79,9 +78,9 @@ main {
     background: #ffffff;
     border-radius: 2px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    height: fit-content;
-    margin: 20px auto -10px;
     font-size: 15px;
+    height: fit-content;
+    margin: 16px auto -10px;
     padding: 10px 24px;
     width: 87.5%;
 }
@@ -91,9 +90,9 @@ main {
     border-radius: 2px;
     bottom: 0;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    font-size: 15px;
     height: fit-content;
     left: 0;
-    font-size: 15px;
     line-height: 36px;
     margin: auto;
     padding: 20px;
@@ -109,43 +108,35 @@ main {
 }
 
 .page-prompt {
-    position: fixed;
+    align-items: center;
+    animation: comeUp 0.5s, fadeout 0.5s 5s;
+    -webkit-animation: comeUp 0.5s, fadeout 0.5s 5s;
+    background: #00838F;
+    background-size: cover;
+    border-radius: 2px;
+    bottom: 30px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    color: #fff;
+    display: flex;
     font-size: 15px;
     font-weight: bold;
-    color: #fff;
-    z-index: 5;
-    bottom: 30px;
-    padding: 22px;
-    left: 0;
-    right: 0;
-    visibility: visible;
-    margin: 24px auto -10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 25%;
     height: 40px;
-    border-radius: 2px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    background-size: cover;
+    justify-content: center;
+    left: 0;
+    margin: 24px auto -10px;
+    padding: 22px;
+    position: fixed;
+    right: 0;
     /*background: #006064 url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23006f76' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23007d88' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23008d9b' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23009cae' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%2300acc1' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%2300a8bc' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%2300a4b7' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23009fb1' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23009bac' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%230097a7' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E") fixed center;*/
-    background: #00838F;
-    animation: comeUp 0.5s, fadeout 0.5s 5s;
+    visibility: visible;
+    width: 25%;
+    z-index: 5;
     animation-fill-mode: forwards;
-    -webkit-animation: comeUp 0.5s, fadeout 0.5s 5s;
     -webkit-animation-fill-mode: forwards;
 }
 
 .page-prompt-text {
     unicode-bidi: plaintext;
-}
-
-.close-prompt {
-    position: absolute;
-    right: 20px;
-    font-size: 20px;
-    color: #fff;
-    cursor: pointer;
 }
 
 /****************************************/
@@ -180,25 +171,25 @@ nav {
 }
 
 .search-container {
+    align-items: center;
     display: flex;
     margin-left: 40px;
-    align-items: center;
     width: 240px;
 }
 
 .search-form {
-    display: flex;
     align-items: center;
+    display: flex;
 }
 
 .search-button {
-    display: flex;
     background: none;
     border: none;
+    cursor: pointer;
+    display: flex;
+    outline: none;
     position: relative;
     right: 26px;
-    cursor: pointer;
-    outline: none;
 }
 
 .search-icon {
@@ -206,22 +197,26 @@ nav {
 }
 
 .search-input {
-    width: 200px;
-    background: #fff;
-    border: 1px solid #e5e5e5;
-    padding: 0 8px;
-    height: 28px;
-    display: flex;
     align-items: center;
-    font-size: 13px;
-    color: #555;
+    /*background: #fff;*/
+    /*border: 1px solid #9ba7af;*/
+    background: #efefef;
+    border: none;
     border-radius: 4px;
-    transition: all ease 0.18s;
+    color: #555;
+    display: flex;
+    font-size: 13px;
+    height: 30px;
+    padding: 0 8px;
+    transition: all ease 0.2s;
+    width: 220px;
 }
 
 .search-input:focus {
-    width: 240px;
-    border: 1px solid #ccc;
+    /*border: 1px solid #00B8D4;*/
+    border-radius: 0;
+    height: 34px;
+    width: 228px;
 }
 
 .search-input::placeholder {
@@ -237,8 +232,8 @@ nav {
 
 .cat-container {
     display: flex;
-    height: 100%;
     font-size: 15px;
+    height: 100%;
     margin-left: -110px;
 }
 
@@ -261,11 +256,11 @@ nav {
 }
 
 .usr-inf-container {
-    margin-right: 40px;
     margin-left: -65px;
+    margin-right: 40px;
 }
 
-.usr, .usr-inf-container, .usr-log, .usr-inf-txt, .usr-inf, .usr-inf-score {
+.usr, .usr-inf-container, .usr-log {
     align-items: center;
     -webkit-align-items: center;
     display: -ms-flexbox;
@@ -273,10 +268,6 @@ nav {
     display: flex;
     -ms-flex-align: center;
     justify-content: center;
-}
-
-.usr-inf-txt {
-    flex-flow: column;
 }
 
 #log-in {
@@ -302,31 +293,15 @@ nav {
 }
 
 #new-post {
+    font-size: 14px;
     margin-right: 36px;
     padding: 6px 8px;
-    font-size: 14px;
     transition: all ease 0.4s;
-}
-
-#usr-name, #score {
-    font-size: 14px;
-    margin: 0;
 }
 
 #avatar {
     border-radius: 50%;
     height: 40px;
-}
-
-#badge {
-    width: 20px;
-}
-
-#logout {
-    align-items: center;
-    display: flex;
-    height: 18px;
-    margin-right: 32px;
 }
 
 .btn {
@@ -427,11 +402,6 @@ nav {
 /****************************************/
 /************ Login dialog ************/
 /* form starting stylings ------------------------------- */
-.group {
-    margin-bottom: 3em;
-    position: relative;
-}
-
 .flat-inp {
     border: none;
     border-bottom: 1px solid #d0dce7;
@@ -493,12 +463,16 @@ input:focus ~ label, input:valid ~ label, textarea:focus ~ label, textarea:valid
 .log-form {
     background: #FFFFFF;
     border-radius: 2px;
-    height: auto;
-    margin: 8% auto;
+    bottom: 50px;
+    height: fit-content;
+    left: 0;
+    margin: auto;
     max-width: 345px;
     padding: 40px 40px 20px;
-    position: relative;
+    position: absolute;
+    right: 0;
     text-align: center;
+    top: 0;
 }
 
 #login-dialog .close {
@@ -675,10 +649,10 @@ input:focus ~ label, input:valid ~ label, textarea:focus ~ label, textarea:valid
 }
 
 .logout {
+    cursor: pointer;
     height: 18px;
     vertical-align: middle;
-    fill: #aab8c2;
-    cursor: pointer;
+    fill: #838e9b;;
 }
 
 /****************************************/
@@ -692,7 +666,7 @@ main {
 
 .top-cards {
     display: grid;
-    margin: 10px auto 0;
+    margin: 6px auto 0;
     /*max-width: 1200px;*/
     grid-template-columns: repeat(3, 1fr);
 }
@@ -782,10 +756,10 @@ main {
 }
 
 .score span {
-    color: #AAB8C2;
+    color: #919da5;
     font-size: 11px;
-    margin: 0;
     font-weight: bold;
+    margin: 0;
 }
 
 .score img {
@@ -803,18 +777,22 @@ main {
 .read-more {
     background-color: transparent;
     border-radius: 2px;
-    unicode-bidi: plaintext;
-    color: #959595;
+    color: #757575;
     font-size: 12px;
     padding: 8px 10px 6px;
     text-align: center;
     text-decoration: none;
-    transition: all 450ms cubic-bezier(.23, 1, .32, 1) 0ms;
+    transition: all 450ms cubic-bezier(.23, 1, .32, 1);
+    unicode-bidi: plaintext;
 }
 
 .read-more:hover {
-    background: rgba(153, 153, 153, 0.25);
-    color: #555555;
+    background: rgba(150, 150, 150, 0.25);
+    color: #555;
+}
+
+.read-more:active {
+    background: rgba(150, 150, 150, 0.5);
 }
 
 .card-img, .card .card-video {
@@ -833,9 +811,9 @@ main {
 }
 
 .card .card-video {
-    max-height: 185px;
-    /*min-height: 144px;*/
     background-color: #000;
+    /*min-height: 144px;*/
+    max-height: 185px;
 }
 
 .subject .card-video {
@@ -885,8 +863,10 @@ main {
 }
 
 .ply-ico::before, .ply-ico::after {
-    border: 0 solid transparent;
+    /*DO NOT OPTIMIZE*/
+    border-color: transparent;
     border-left-color: #eee;
+    border-style: solid;
     border-width: 8px 0 8px 15px;
     content: '';
     display: block;
@@ -918,13 +898,13 @@ main {
 }
 
 progress {
-    -webkit-appearance: none;
-    -moz-appearance: none;
     border: none;
     bottom: 0;
     height: 4px;
     position: absolute;
     width: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 progress::-moz-progress-bar {
@@ -954,7 +934,7 @@ progress::-webkit-progress-value {
     height: 18px;
     margin-right: 18px;
     vertical-align: middle;
-    fill: #aab8c2;
+    fill: #919da5;
 }
 
 .share-container {
@@ -977,9 +957,9 @@ progress::-webkit-progress-value {
 }
 
 .share-content img {
+    height: 18px;
     margin: 10px 10px 0;
     width: 15px;
-    height: 18px;
 }
 
 .share-content a:last-child img {
@@ -1018,7 +998,7 @@ progress::-webkit-progress-value {
     margin-right: 4px;
     vertical-align: middle;
     width: 13px;
-    fill: #aab8c2;
+    fill: #919da5;
 }
 
 .meters {
@@ -1075,9 +1055,10 @@ progress::-webkit-progress-value {
 
 /*******************************/
 .like-num {
-    color: #AAB8C2;
+    color: #919da5;
     font-size: 12px;
     font-weight: normal;
+    margin-right: -4px;
     margin-top: 0;
     text-align: center;
 }
@@ -1088,9 +1069,9 @@ progress::-webkit-progress-value {
 }
 
 .chip {
-    background: rgba(224, 224, 224, 0.6);
+    background: rgba(224, 224, 224, 0.8);
     border-radius: 16px;
-    color: #707070;
+    color: #666;
     font-size: 13px;
     height: fit-content;
     margin-right: 5px;
@@ -1101,8 +1082,12 @@ progress::-webkit-progress-value {
     width: fit-content;
 }
 
+.pinned-cards {
+    margin-top: -20px;
+}
+
 .card-date {
-    color: #9a9a9a;
+    color: #757575;
     font-size: 10px;
     margin-left: 8px;
 }
@@ -1145,7 +1130,7 @@ progress::-webkit-progress-value {
 /*rest*/
 .rest {
     display: grid;
-    margin: auto;
+    margin: 6px auto auto;
     /*max-width: 1200px;*/
     grid-template-columns: 4fr 1fr;
 }
@@ -1165,17 +1150,13 @@ progress::-webkit-progress-value {
     display: -webkit-flex;
     display: flex;
     font-size: 48px;
-    height: 120px;
+    height: 110px;
     justify-content: center;
-    margin: 20px 1rem 0;
+    margin: 0 1rem 0;
     text-transform: capitalize;
     grid-column-start: 1;
     grid-column-end: 4;
     /*background: #ffffff url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23cccccc' stroke-width='10' %3E%3Cpath d='M-500%2C75c0%2C0%2C125-30%2C250-30S0%2C75%2C0%2C75s125%2C30%2C250%2C30s250-30%2C250-30s125-30%2C250-30s250%2C30%2C250%2C30s125%2C30%2C250%2C30s250-30%2C250-30'/%3E%3Cpath d='M-500%2C45c0%2C0%2C125-30%2C250-30S0%2C45%2C0%2C45s125%2C30%2C250%2C30s250-30%2C250-30s125-30%2C250-30s250%2C30%2C250%2C30s125%2C30%2C250%2C30s250-30%2C250-30'/%3E%3Cpath d='M-500%2C105c0%2C0%2C125-30%2C250-30S0%2C105%2C0%2C105s125%2C30%2C250%2C30s250-30%2C250-30s125-30%2C250-30s250%2C30%2C250%2C30s125%2C30%2C250%2C30s250-30%2C250-30'/%3E%3Cpath d='M-500%2C15c0%2C0%2C125-30%2C250-30S0%2C15%2C0%2C15s125%2C30%2C250%2C30s250-30%2C250-30s125-30%2C250-30s250%2C30%2C250%2C30s125%2C30%2C250%2C30s250-30%2C250-30'/%3E%3Cpath d='M-500-15c0%2C0%2C125-30%2C250-30S0-15%2C0-15s125%2C30%2C250%2C30s250-30%2C250-30s125-30%2C250-30s250%2C30%2C250%2C30s125%2C30%2C250%2C30s250-30%2C250-30'/%3E%3Cpath d='M-500%2C135c0%2C0%2C125-30%2C250-30S0%2C135%2C0%2C135s125%2C30%2C250%2C30s250-30%2C250-30s125-30%2C250-30s250%2C30%2C250%2C30s125%2C30%2C250%2C30s250-30%2C250-30'/%3E%3C/g%3E%3C/svg%3E") fixed;*/
-}
-
-.ord-card {
-    margin: 1rem;
 }
 
 /*************************************************/
@@ -1211,10 +1192,6 @@ progress::-webkit-progress-value {
         grid-template-columns: 1fr;
     }
 
-    .pinned-cards {
-        display: none;
-    }
-
     .subject {
         grid-column-start: 1;
         grid-column-end: 3;
@@ -1222,6 +1199,11 @@ progress::-webkit-progress-value {
 }
 
 @media screen and (max-width: 768px) {
+
+    .search-container {
+        display: none;
+    }
+
     .top-cards {
         display: grid;
         margin: auto;
@@ -1239,10 +1221,6 @@ progress::-webkit-progress-value {
         margin: auto;
         width: 70%;
         grid-template-columns: 1fr;
-    }
-
-    .pinned-cards {
-        display: none;
     }
 
     .subject {
@@ -1307,9 +1285,9 @@ progress::-webkit-progress-value {
 }
 
 .foot-sec-left {
+    align-items: center;
     display: flex;
     flex-flow: column;
-    align-items: center;
 }
 
 .langs {
@@ -1319,9 +1297,9 @@ progress::-webkit-progress-value {
 }
 
 .lang {
-    display: flex;
     align-items: center;
     cursor: pointer;
+    display: flex;
 }
 
 .lang:hover .lang-flag {
@@ -1333,20 +1311,20 @@ progress::-webkit-progress-value {
 }
 
 .lang-flag {
-    width: 18px;
-    margin-right: 8px;
     filter: grayscale(100%) opacity(40%);
+    margin-right: 8px;
+    width: 18px;
 }
 
 .lang-name {
-    font-size: 10px;
     color: #444;
+    font-size: 10px;
 }
 
 .copyright {
     background: #eaeaea;
     bottom: 0;
-    color: #757575;
+    color: #555;
     font-size: 14px;
     padding-bottom: 11px;
     padding-top: 14px;
@@ -1381,48 +1359,25 @@ progress::-webkit-progress-value {
 }
 
 .foot-brand {
+    align-items: center;
     display: flex;
     flex-flow: row;
-    align-items: center;
 }
 
 .foot-brand-img {
-    height: 68px;
-    fill: #00acc1;
-    /*margin-right: 20px;*/
     filter: opacity(20%) grayscale(100%);
-}
-
-.foot-brand-name {
-    font-size: 24px;
-    color: #cfcfcf;
-    margin-bottom: 4px;
-    font-family: cursive;
+    height: 68px;
+    /*margin-right: 20px;*/
+    fill: #00acc1;
 }
 
 /*******************************/
-.red-placeholder::placeholder {
-    color: #ff0000;
-}
-
-.red-placeholder {
-    border: 2px solid #ff0000;
-}
-
-.green-placeholder::placeholder {
-    color: #00ff00;
-}
-
-.green-placeholder {
-    border: 2px solid #00ff00;
-}
-
 .multiline-text {
+    border: solid 1px #ccc;
     height: 160px;
     outline-color: #00acc1;
     overflow: auto;
+    padding: 8px;
     resize: none;
     width: 100%;
-    padding: 8px;
-    border: solid 1px #ccc;
 }
