--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -10,7 +10,7 @@
 <main>
     <div th:replace="fragments::prompt"></div>
     <div th:class="${posts.size() gt 0 ? 'result-prompt' : 'no-result-prompt'}">
-        <img th:if="${posts.size() == 0}" src="/images/ic-lamp.svg" alt="no results">
+        <img th:if="${posts.size() == 0}" src="/img/ic-lamp.svg" alt="no results">
         <div th:if="${posts.size() == 0}">No results found!</div>
         <div th:if="${posts.size() gt 0}">
             <span th:text="${posts.size()} + ' result' + ${posts.size() gt 1 ? 's':''} + ' found'"></span>
