Add javadoc to methods and classes

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -90,7 +90,7 @@
                 font-size: 16px;
             }
             50% {
-                font-size: 24px;
+                font-size: 20px;
             }
             100% {
                 font-size: 16px;
@@ -112,9 +112,7 @@
     <div class="rect anim anim9" data-anim-delay="8"></div>
     <div class="rect anim anim10" data-anim-delay="9"></div>
 </div>
-<p class="text">
-    404 Not Found!
-</p>
+<p class="text">Custom error page</p>
 </body>
 
 </html>
