Fix "Follow us" links

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -270,12 +270,10 @@
             <div class="foot-links">
                 <div class="foot-follow-us">
                     <span class="follow-prompt" th:text="#{footer.follow}">Follow Ceno</span>
-                    <a href="http://facebook.com/sharer/sharer.php?u=ceno.ir" target="_blank"
-                       rel="noopener">
+                    <a href="http://www.facebook.com/ceno" target="_blank" rel="noopener">
                         <img class="follow-us-image" src="/img/soc-facebook.svg" alt="facebook">
                     </a>
-                    <a href="http://twitter.com/intent/tweet?url=ceno.ir" target="_blank"
-                       rel="noopener">
+                    <a href="http://www.twitter.com/ceno" target="_blank" rel="noopener">
                         <img class="follow-us-image" src="/img/soc-twitter.svg" alt="twitter">
                     </a>
                     <a th:if="${#httpServletRequest.requestURI.startsWith('/categories')} "
